--- a/NuGet.config
+++ b/NuGet.config
@@ -2,9 +2,7 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
-    <!-- This feed should not be used when shipping on Nuget. It should just be used in the dev branch while dependencies are not available on NuGet.org -->
-    <!--<add key="OrchardCore" value="https://www.myget.org/F/orchardcore-dev/api/v3/index.json" />-->
+    <add key="github" value="https://nuget.pkg.github.com/nielsedens/index.json" />
   </packageSources>
   <disabledPackageSources />
 </configuration>
