--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,9 +17,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-        source-url: https://nuget.pkg.github.com/nielsedens/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
     - name: Install dependencies
       run: dotnet restore
@@ -30,4 +27,6 @@ jobs:
     - name: Pack
       run: dotnet pack --configuration Release -o .
     - name: Publish
-      run: dotnet nuget push *.nupkg
+      env:
+        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      run: dotnet nuget push *.nupkg --source github
